Добавлены новые картинки

--- a/site/about.html
+++ b/site/about.html
@@ -50,10 +50,34 @@
                 <li>Преподавателей, ищущих новые методы обучения</li>
                 <li>Всех, кто сталкивается с необходимостью запоминать формулы</li>
             </ul>
+            <div class="interface-gallery">
+                <div class="interface-item">
+                    <img src="images/formula-interface1.png"
+                         alt="Интерфейс задачи с формулой по физике"
+                         class="interface-image">
+                    <p class="image-caption">Интерфейс задачи с формулой по физике</p>
+                </div>
 
-            <div class="interface-example">
-                <img src="images/formula-interface.png" alt="Пример интерфейса для запоминания формул по физике">
-                <p class="image-caption">Интерфейс модуля для запоминания формул по физике</p>
+                <div class="interface-item">
+                    <img src="images/formula-interface2.png"
+                         alt="Интерфейс запоминания формулы"
+                         class="interface-image">
+                    <p class="image-caption">Интерфейс для запоминания формулы по физике</p>
+                </div>
+
+                <div class="interface-item">
+                    <img src="images/formula-interface3.png"
+                         alt="Интерфейс результатов 1"
+                         class="interface-image">
+                    <p class="image-caption">Анализ результатов выполнения заданий</p>
+                </div>
+
+                <div class="interface-item">
+                    <img src="images/formula-interface4.png"
+                         alt="Интерфейс результатов 2"
+                         class="interface-image">
+                    <p class="image-caption">Детальная статистика успеваемости</p>
+                </div>
             </div>
         </section>
     </main>
